Fix radio button layout issues.
EDUCATOR-557

--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -1258,11 +1258,11 @@
     }
 
     .three-column-layout {
-       max-width: 33%;
+       max-width: 30%;
     }
 
     .two-column-layout {
-       max-width: 50%;
+       max-width: 47%;
     }
 
     .field-message {
